tenants/bookwork/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bookwork-ingress
  annotations:
    # This annotation tells GKE to create a Google-managed SSL certificate
    networking.gke.io/managed-certificates: bookwork-demo-cert
    # This annotation specifies that the Ingress is for external HTTPS traffic
    kubernetes.io/ingress.class: "gke"
spec:
  rules:
    - host: "bookwork-demo.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bookwork-frontend
                port:
                  number: 80
